<resources>
    <string name="app_name">Smart Box</string>

    <string name="missing_value">N/A</string>

    <string name="room_selection_prompt">Select Boxes</string>
    <string name="room_one_button">1</string>
    <string name="room_two_button">2</string>
    <string name="room_three_button">3</string>
    <string name="room_four_button">4</string>
    <string name="next_button">Next</string>
    <string name="players_selection_prompt">Select Game Type</string>
    <string name="one_player_button">One Player</string>
    <string name="two_player_button">Two Player</string>
    <string name="test_mode_button">Test Mode</string>

    <string name="plus_button">+</string>
    <string name="minus_button">-</string>

    <string name="game_selection_prompt">Select Game</string>
    <string name="start_prompt">START</string>
    <string name="standard_status">STANDARD</string>
    <string name="synchronous_status">SYNCHRONOUS</string>
    <string name="asynchronous_status">ASYNCHRONOUS</string>

    <string name="game_number_prompt">Number of Games</string>
    <string name="game_time_prompt">Game Length (In Seconds)</string>
    <string name="game_delay_prompt">Delay Between Games (In Seconds)</string>
    <string name="target_time_prompt">Time per Target (In Seconds)</string>

    <string name="default_game_length">60</string>
    <string name="default_delay_length">90</string>
    <string name="default_target_time">5</string>

    <string name="no_connection">No Connection</string>

    <string name="connecting">CONNECTING</string>
    <string name="connection_failed">CONNECTION FAIL</string>
    <string name="connected">CONNECTED</string>

    <string name="one_player_score_title">Score</string>
    <string name="two_player_score_title_one">Player 1 Score</string>
    <string name="two_player_score_title_two">Player 2 Score</string>

    <string name="game_title">%s Game</string>

    <string name="game_over">Game Over</string>
    <string name="play_again">Play Again</string>
    <string name="new_game">New Game</string>
    <string name="shutdown">Shut Down</string>

    <string name="room_one">Room 1</string>
    <string name="room_two">Room 2</string>
    <string name="room_three">Room 3</string>
    <string name="room_four">Room 4</string>

    <string name="room_title">Room %s</string>

    <string name="connection_error">Connection Error</string>
    <string name="connection_error_help">Ensure the Pi is on and Wifi is connected</string>
    <string name="connection_error_retry">Try Again</string>

    <string name="next_game_timer">Until Next Game</string>
</resources>