<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:gravity="center"
    tools:context=".BoxActivity">

    <TextView
        android:id="@+id/room_selection_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/room_selection_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/room_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:layout_margin="10dp"
            android:textSize="60sp"
            android:text= "@string/room_one_button"
            android:backgroundTint="@color/button_background_color"/>

        <Button
            android:id="@+id/room_two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:layout_margin="10dp"
            android:textSize="60sp"
            android:text= "@string/room_two_button"
            android:backgroundTint="@color/button_background_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/room_three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:layout_margin="10dp"
            android:textSize="60sp"
            android:text="@string/room_three_button"
            android:backgroundTint="@color/button_background_color"/>

        <Button
            android:id="@+id/room_four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:layout_margin="10dp"
            android:textSize="60sp"
            android:text="@string/room_four_button"
            android:backgroundTint="@color/button_background_color"/>
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop = "30dp"
        android:textSize="30sp"
        android:text="@string/next_button" />

</LinearLayout>