<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:textSize="40sp"
        android:text="@string/game_over" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"/>

    <include
        android:id="@+id/room_one"
        android:layout="@layout/list_item_result"/>

    <include
        android:id="@+id/room_two"
        android:layout="@layout/list_item_result"/>

    <include
        android:id="@+id/room_three"
        android:layout="@layout/list_item_result"/>

    <include
        android:id="@+id/room_four"
        android:layout="@layout/list_item_result"/>






    <Button
        android:id="@+id/play_again_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/shutdown" />
</LinearLayout>